# code-ramblings

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
libs/: pure_dataclass.py
notebooks/: MixedDist.ipynb  MixedModel.ipynb  MixtureModels.ipynb  NoSkillClassifier.ipynb
notebooks/utils/: __init__.py
src/code_ramblings/: distributions.py  pure_dataclass.py
src/code_ramblings/models/: __init__.py  mixture_model.py
src/code_ramblings/models/conformal_prediction/: __init__.py  classifier.py
src/code_ramblings/models/interfaces/: __init__.py
src/code_ramblings/models/stats/: __init__.py  _generics.py  degenerate.py  mixture_model.py  negative_binomial.py  poisson.py
src/code_ramblings/utils/data/: __init__.py  data_container.py
